@startuml Tournament System
title Tournament System - Group 1 

class Match {
    *match_id: Integer
    Tournament
    Teams
    Winner
}

class Team {
    *team_id
    Name
    Tournaments
    Matches
}

class Tournament {
    *tournament_id
    Name
    
    Banner Image
    Start-time
    End-time
    Teams
}

class Administrator {
    *admin_id
    Name
    Email
    Manager-status
}

class User {
    
}

Team "2..*" -- "1..*" Tournament : "Plays in"
Tournament "1" -- "1..*" Match : "Contains"
Team "2..2" -- "1..*" Match : "Competes in"

Administrator "1..*" -- "0..*" Tournament : "Manages"
Administrator "1..*" -- "0..*" Team : "Manages"
User "0..*" --> "0..*" Tournament : "View overview"

@enduml